package rina.messages;
option java_package="rina.encoding.impl.googleprotobuf.directoryforwardingtable";
import "DirectoryForwardingTableEntryMessage.proto";

message directoryForwardingTableEntrySet_t{   //carries information about directoryforwardingtable entries
    repeated directoryForwardingTableEntry_t directoryForwardingTableEntry= 1;
}